
//https://github.com/google/protobuf
//protoc --go_out=. *.proto


syntax = "proto3";
package protoBuff;

message LoginInfo {
     string appToken = 1; 
     int64 userId = 2; 
     string deviceId = 3;
}
 


